--- a/CurrencyExchane/src/main/webapp/WEB-INF/web.xml
+++ b/CurrencyExchane/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,14 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
 		 version="5.0">
+
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>CORSFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 </web-app>
