--- a/CurrencyExchane/pom.xml
+++ b/CurrencyExchane/pom.xml
@@ -28,6 +28,11 @@
 		  <version>2.17.0</version>
 	  </dependency>
 
+	  <dependency>
+		  <groupId>com.zaxxer</groupId>
+		  <artifactId>HikariCP</artifactId>
+		  <version>5.0.1</version>
+	  </dependency>
 
 	  <dependency>
 		  <groupId>jakarta.servlet</groupId>
